- Se agrego la relacion entre Styles y Artist - Se cambio el archivo de application.properties

--- a/music-collection/src/main/resources/application.properties
+++ b/music-collection/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 # Datasource configuration
-spring.datasource.url = "jdbc:postgresql://localhost/collection"
-spring.datasource.username = "music"
-spring.datasource.password = "music"
+spring.datasource.url = jdbc:postgresql://localhost/collection
+spring.datasource.username = music
+spring.datasource.password = music
 
+debug=false
 # Hibernate properties
-spring.jpa.hibernate.ddl-auto = "create-drop"
+spring.jpa.hibernate.ddl-auto = create-drop
 
 #show sql statement
 logging.level.org.hibernate.SQL=debug
