--- a/music-collection/src/main/resources/application.properties
+++ b/music-collection/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password = music
 
 debug=false
 # Hibernate properties
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 #show sql statement
 #logging.level.org.hibernate.SQL=debug
